syntax = "proto3";

package account;

option go_package = "github.com/tunvx/simplebank/grpc/pb/cusman/account";

import "google/protobuf/timestamp.proto";  

message Account {
    int64  account_id = 1;
    int64  current_balance = 2;
    string currency_type = 3;
    google.protobuf.Timestamp created_at = 4; 
    string description = 5;
    string account_status = 6;
}

